--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ h1, h2, p, li{
     list-style-type: none;
     padding: 0;
     margin: 0;
+    overflow: auto;
+}
+
+#messages_panel {
+    overflow: auto;
 }
 
 .msg1 {
@@ -128,10 +133,6 @@ h1, h2, p, li{
 #user_input {
     grid-column: 2;
     grid-row: 1;
-}
-
-#message_panel {
-    overflow-y: scroll;
 }
 
 #send_panel {
